kubernetes/charts/hippo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hippo-service
  labels: 
    app: hippo
spec:
  type: ClusterIP
  ports:
  - name: hippo
    port: 8000
    targetPort: 8000
  selector:
    app: hippo
