kubernetes/charts/main-ingress-gke.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http: 
      paths: 
#      - path: /monitoring/*
#        backend: 
#          serviceName: prometheus-service
#          servicePort: 9090
      - path: /hippo/*
        backend: 
          serviceName: hippo-service
          servicePort: 8000
      - path: /bootstrapper/*
        backend:
          serviceName: bootstrapper-service
          servicePort: 8001          
      - path: /*
        backend:
          serviceName: home-service
          servicePort: 8080
